--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "name": "hifiac",
+  "version": "1.0.0",
+  "type": "commonjs", 
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "dev": "npx ts-node src/index.ts"
+  },
   "dependencies": {
     "axios": "^1.8.4",
     "firebase": "^11.6.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
