--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "name": "hifiac",
+  "version": "1.0.0",
+  "description": "Music social network",
+  "scripts": {
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development"
+  },
   "dependencies": {
     "axios": "^1.8.4",
-    "firebase": "^11.6.0"
+    "firebase": "^11.6.0",
+    "webpack": "^5.99.5",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3"
   }
 }
